<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/songListMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/songPadding">

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:text="@string/songTitle"
        android:textSize="@dimen/songFontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@string/songArtist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:text="@string/songArtist"
        android:textSize="@dimen/songFontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@string/album"
        app:layout_constraintStart_toEndOf="@id/songTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="12dp" />

    <TextView
        android:id="@+id/songAlbum"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:text="@string/songAlbum"
        android:textSize="@dimen/songFontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/songLength"
        app:layout_constraintStart_toEndOf="@+id/songArtist"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="12dp" />

    <TextView
        android:id="@+id/songLength"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:text="@string/songLength"
        android:textSize="@dimen/songFontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/songAlbum"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>