<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/selectPadding"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/selectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/selectPadding"
            android:text="@string/selectName"
            android:textSize="@dimen/selectFontSizeMain"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/selectPadding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/selectPadding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numSongsLabel"
                    style="@style/selectText"
                    android:text="@string/numSongs" />

                <TextView
                    android:id="@+id/numSongs"
                    style="@style/selectText"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/selectPadding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playTimeLabel"
                    style="@style/selectText"
                    android:text="@string/playTime" />

                <TextView
                    android:id="@+id/playTime"
                    style="@style/selectText"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>